# Todoapp_with_Fastapi

./: .env  Home.py  asgi.py  database.py  main.py  model.py  pyproject.toml  sreamlit_client.py
client/: sreamlit_client.py
pages/: Project_Page.py  Todo_Page.py  User_Page.py  project_page.py  todo_page.py  user_page.py
public/: __init__.py
public/model/: models.py
public/project/: crud.py  models.py  view.py
public/todo/: crud.py  models.py  view.py
public/user/: crud.py  models.py  view.py
utils/: generic_models.py
