[tool.poetry]
name = "todoapps"
version = "0.1.0"
description = "A simple todo app for todo list"
authors = ["Abdul Qadar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
